--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://kano-kenzie.gitlab.io/q2/todoapppart2"
 }
