--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,16 @@
 image: node:alpine
+
 pages:
   stage: deploy
   script:
-    -npm install
-    -npm run build
-    -rm -rf public
-    -mv build public
+  - npm install
+  - npm run build
+  - rm -rf public
+  - mv build public
   artifacts:
     paths:
-      - public
-    only:
-      - master
+    - public # mandatory, other folder won't work
+  only:
+  - master # or dev, the branch you want to publish
   variables:
-    PUBLIC_URL: "/q2/todoapppart3"
+    PUBLIC_URL: "/q2/todoapppart3" 
